--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,125 @@
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+nav {
+  margin: 0;
+  background-color: #f55a5a;
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  overflow: scroll;
+}
+
+.nav--text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16;
+  line-height: 18px;
+  letter-spacing: -0.075em;
+}
+
+section {
+  padding: 20px;
+}
+
+.travelPoint {
+  display: flex;
+  max-width: 1040px;
+  /* height: 168px; */
+  align-items: center;
+  justify-content: flex-start;
+  margin: 20px auto;
+  /* flex-flow: row; */
+}
+
+.travelPoint--img {
+  width: 125px;
+  height: 168px;
+  border-radius: 5px;
+  margin-right: 19px;
+  object-fit: cover;
+}
+
+.travelPoint--location {
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 12px;
+}
+
+.travelPoint--location > p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+
+  color: #2b283a;
+}
+
+.travelPoint--location > a {
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 12px;
+  /* identical to box height */
+  text-decoration-line: underline;
+  color: #918e9b;
+}
+
+.travelPoint--locimg {
+  color: #f55a5a;
+}
+
+.travelPoint--text > h1 {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 30px;
+  color: #2b283a;
+  margin: 0;
+}
+
+.travelPoint--date {
+  font-weight: 700;
+  font-size: 10.24px;
+  line-height: 12px;
+
+  color: #2b283a;
+}
+
+.travelPoint--description {
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 150%;
+  /* or 15px */
+  color: #2b283a;
+}
+
+hr {
+  border: 1px solid #f5f5f5;
 }
